@@ -1,40 +1,46 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.MyhentaicomicsRipper;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 public class MyhentaicomicsRipperTest extends RippersTest {
     @Test
-    public void testMyhentaicomicsAlbum() throws IOException {
-        MyhentaicomicsRipper ripper = new MyhentaicomicsRipper(new URL("http://myhentaicomics.com/index.php/Nienna-Lost-Tales"));
+    @Tag("flaky")
+    public void testMyhentaicomicsAlbum() throws IOException, URISyntaxException {
+        MyhentaicomicsRipper ripper = new MyhentaicomicsRipper(new URI("http://myhentaicomics.com/index.php/Nienna-Lost-Tales").toURL());
         testRipper(ripper);
     }
 
-    public void testGetGID() throws IOException {
-        URL url = new URL("http://myhentaicomics.com/index.php/Nienna-Lost-Tales");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("http://myhentaicomics.com/index.php/Nienna-Lost-Tales").toURL();
         MyhentaicomicsRipper ripper = new MyhentaicomicsRipper(url);
         // Test a comic
-        assertEquals("Nienna-Lost-Tales", ripper.getGID(url));
+        Assertions.assertEquals("Nienna-Lost-Tales", ripper.getGID(url));
         // Test a search
-        assertEquals("test", ripper.getGID(new URL("http://myhentaicomics.com/index.php/search?q=test")));
+        Assertions.assertEquals("test", ripper.getGID(new URI("http://myhentaicomics.com/index.php/search?q=test").toURL()));
         // Test a tag
-        assertEquals("2409", ripper.getGID(new URL("http://myhentaicomics.com/index.php/tag/2409/")));
+        Assertions.assertEquals("2409", ripper.getGID(new URI("http://myhentaicomics.com/index.php/tag/2409/").toURL()));
     }
     @Test
-    public void testGetAlbumsToQueue() throws IOException {
-        URL url = new URL("https://myhentaicomics.com/index.php/tag/3167/");
+    @Tag("flaky")
+    public void testGetAlbumsToQueue() throws IOException, URISyntaxException {
+        URL url = new URI("https://myhentaicomics.com/index.php/tag/3167/").toURL();
         MyhentaicomicsRipper ripper = new MyhentaicomicsRipper(url);
-        assertEquals(15, ripper.getAlbumsToQueue(ripper.getFirstPage()).size());
+        Assertions.assertEquals(15, ripper.getAlbumsToQueue(ripper.getFirstPage()).size());
     }
     @Test
-    public void testPageContainsAlbums() throws IOException {
-        URL url = new URL("https://myhentaicomics.com/index.php/tag/3167/");
-        URL url2 = new URL("https://myhentaicomics.com/index.php/search?q=test");
+    public void testPageContainsAlbums() throws IOException, URISyntaxException {
+        URL url = new URI("https://myhentaicomics.com/index.php/tag/3167/").toURL();
+        URL url2 = new URI("https://myhentaicomics.com/index.php/search?q=test").toURL();
         MyhentaicomicsRipper ripper = new MyhentaicomicsRipper(url);
-        assertTrue(ripper.pageContainsAlbums(url));
-        assertTrue(ripper.pageContainsAlbums(url2));
+        Assertions.assertTrue(ripper.pageContainsAlbums(url));
+        Assertions.assertTrue(ripper.pageContainsAlbums(url2));
     }
 }
