@@ -1,19 +1,25 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.RulePornRipper;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 public class RulePornRipperTest extends RippersTest {
-    public void testRip() throws IOException {
-        RulePornRipper ripper = new RulePornRipper(new URL("https://ruleporn.com/are-you-going-to-fill-my-lil-pussy-up/"));
+    @Test
+    public void testRip() throws IOException, URISyntaxException {
+        RulePornRipper ripper = new RulePornRipper(new URI("https://ruleporn.com/tosh/").toURL());
         testRipper(ripper);
     }
 
-    public void testGetGID() throws IOException {
-        URL url = new URL("https://ruleporn.com/are-you-going-to-fill-my-lil-pussy-up/");
+    @Test
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://ruleporn.com/tosh/").toURL();
         RulePornRipper ripper = new RulePornRipper(url);
-        assertEquals("are-you-going-to-fill-my-lil-pussy-up", ripper.getGID(url));
+        Assertions.assertEquals("tosh", ripper.getGID(url));
     }
 }
