@@ -1,21 +1,27 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.TheyiffgalleryRipper;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 public class TheyiffgalleryRipperTest extends RippersTest {
     @Test
-    public void testTheyiffgallery() throws IOException {
-        TheyiffgalleryRipper ripper = new TheyiffgalleryRipper(new URL("https://theyiffgallery.com/index?/category/4303"));
+    @Tag("flaky")
+    public void testTheyiffgallery() throws IOException, URISyntaxException {
+        TheyiffgalleryRipper ripper = new TheyiffgalleryRipper(new URI("https://theyiffgallery.com/index?/category/4303").toURL());
         testRipper(ripper);
     }
 
-    public void testGetGID() throws IOException {
-        URL url = new URL("https://theyiffgallery.com/index?/category/4303");
+    @Test
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://theyiffgallery.com/index?/category/4303").toURL();
         TheyiffgalleryRipper ripper = new TheyiffgalleryRipper(url);
-        assertEquals("4303", ripper.getGID(url));
+        Assertions.assertEquals("4303", ripper.getGID(url));
     }
 }
