@@ -2,9 +2,12 @@ package com.rarchives.ripme.tst.ripper.rippers;
 
 import com.rarchives.ripme.ripper.rippers.VscoRipper;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 public class VscoRipperTest extends RippersTest {
@@ -15,31 +18,20 @@ public class VscoRipperTest extends RippersTest {
      * @throws IOException
      */
     @Test
-    public void testSingleImageRip() throws IOException {
-        VscoRipper ripper = new VscoRipper(new URL("https://vsco.co/jonathangodoy/media/5d1aec76bb669a128035e98a"));
+    public void testSingleImageRip() throws IOException, URISyntaxException {
+        VscoRipper ripper = new VscoRipper(new URI("https://vsco.co/jolly-roger/media/597ce449846079297b3f7cf3").toURL());
         testRipper(ripper);
     }
 
     /**
-     * Tests profile rip.
-     * 
-     * @throws IOException
-     */
-    @Test
-    public void testProfileRip() throws IOException {
-        VscoRipper ripper = new VscoRipper(new URL("https://vsco.co/jonathangodoy/images/1"));
-        testRipper(ripper);
-    }
-
-    /**
-     * Prevents Bug #679 from happening again.
+     * Tests profile rip., Prevents Bug #679 from happening again.
      * https://github.com/RipMeApp/ripme/issues/679
      * 
      * @throws IOException
      */
     @Test
-    public void testHyphenatedRip() throws IOException {
-        VscoRipper ripper = new VscoRipper(new URL("https://vsco.co/jolly-roger/images/1"));
+    public void testHyphenatedRip() throws IOException, URISyntaxException {
+        VscoRipper ripper = new VscoRipper(new URI("https://vsco.co/jolly-roger/gallery").toURL());
         testRipper(ripper);
     }
 
@@ -49,12 +41,12 @@ public class VscoRipperTest extends RippersTest {
      * @throws IOException
      */
     @Test
-    public void testGetGID() throws IOException {
-        URL url = new URL("https://vsco.co/minijello/media/571cd612542220261a123441");
+    public void testGetGID() throws IOException, URISyntaxException {
+        URL url = new URI("https://vsco.co/jolly-roger/media/590359c4ade3041f2658f407").toURL();
 
         VscoRipper ripper = new VscoRipper(url);
 
-        assertEquals("Failed to get GID", "minijello/571cd", ripper.getGID(url));
+        Assertions.assertEquals("jolly-roger/59035", ripper.getGID(url), "Failed to get GID");
     }
 
 }
