@@ -1,11 +1,14 @@
 package com.rarchives.ripme.tst.ripper.rippers;
 
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import com.rarchives.ripme.ripper.rippers.WordpressComicRipper;
 
-import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 public class WordpressComicRipperTest extends RippersTest {
@@ -22,96 +25,100 @@ public class WordpressComicRipperTest extends RippersTest {
     // http://shipinbottle.pepsaga.com/?p=281
 
     @Test
-    @Disabled("https://github.com/RipMeApp/ripme/issues/269 - Disabled test - WordpressRipperTest: various domains flaky in CI")
-    public void test_totempole666() throws IOException {
+    @Tag("flaky") // https://github.com/RipMeApp/ripme/issues/269 - Disabled test - WordpressRipperTest: various domains flaky in CI
+    public void test_totempole666() throws IOException, URISyntaxException {
         WordpressComicRipper ripper = new WordpressComicRipper(
-                new URL("http://www.totempole666.com/comic/first-time-for-everything-00-cover/"));
+                new URI("http://www.totempole666.com/comic/first-time-for-everything-00-cover/").toURL());
         testRipper(ripper);
     }
 
     @Test
-    @Disabled("https://github.com/RipMeApp/ripme/issues/269 - Disabled test - WordpressRipperTest: various domains flaky in CI")
-    public void test_buttsmithy() throws IOException {
-        WordpressComicRipper ripper = new WordpressComicRipper(new URL("http://buttsmithy.com/archives/comic/p1"));
+    @Tag("flaky") // https://github.com/RipMeApp/ripme/issues/269 - Disabled test - WordpressRipperTest: various domains flaky in CI
+    public void test_buttsmithy() throws IOException, URISyntaxException {
+        WordpressComicRipper ripper = new WordpressComicRipper(new URI("http://buttsmithy.com/archives/comic/p1").toURL());
         testRipper(ripper);
     }
 
     @Test
-    @Disabled("https://github.com/RipMeApp/ripme/issues/269 - Disabled test - WordpressRipperTest: various domains flaky in CI")
-    public void test_themonsterunderthebed() throws IOException {
+    @Tag("flaky") // https://github.com/RipMeApp/ripme/issues/269 - Disabled test - WordpressRipperTest: various domains flaky in CI
+    public void test_themonsterunderthebed() throws IOException, URISyntaxException {
         WordpressComicRipper ripper = new WordpressComicRipper(
-                new URL("http://themonsterunderthebed.net/?comic=test-post"));
+                new URI("http://themonsterunderthebed.net/?comic=test-post").toURL());
         testRipper(ripper);
     }
     @Test
-    public void test_prismblush() throws IOException {
+    public void test_prismblush() throws IOException, URISyntaxException {
         WordpressComicRipper ripper = new WordpressComicRipper(
-                new URL("http://prismblush.com/comic/hella-trap-pg-01/"));
+                new URI("http://prismblush.com/comic/hella-trap-pg-01/").toURL());
         testRipper(ripper);
     }
     @Test
-    public void test_konradokonski_1() throws IOException {
+    @Tag("flaky")
+    public void test_konradokonski_1() throws IOException, URISyntaxException {
         WordpressComicRipper ripper = new WordpressComicRipper(
-                new URL("http://www.konradokonski.com/sawdust/comic/get-up/"));
+                new URI("http://www.konradokonski.com/sawdust/comic/get-up/").toURL());
         testRipper(ripper);
 
     }
     @Test
-    public void test_konradokonski_2() throws IOException {
+    @Tag("flaky")
+    public void test_konradokonski_2() throws IOException, URISyntaxException {
         WordpressComicRipper ripper = new WordpressComicRipper(
-                new URL("http://www.konradokonski.com/wiory/comic/08182008/"));
+                new URI("http://www.konradokonski.com/wiory/comic/08182008/").toURL());
         testRipper(ripper);
     }
     @Test
-    public void test_konradokonski_getAlbumTitle() throws IOException {
-        URL url = new URL("http://www.konradokonski.com/sawdust/comic/get-up/");
+    public void test_konradokonski_getAlbumTitle() throws IOException, URISyntaxException {
+        URL url = new URI("http://www.konradokonski.com/sawdust/comic/get-up/").toURL();
         WordpressComicRipper ripper = new WordpressComicRipper(url);
-        assertEquals("konradokonski.com_sawdust", ripper.getAlbumTitle(url));
+        Assertions.assertEquals("konradokonski.com_sawdust", ripper.getAlbumTitle(url));
 
     }
 
     @Test
-    @Disabled("https://github.com/RipMeApp/ripme/issues/269 - Disabled test - WordpressRipperTest: various domains flaky in CI")
-    public void test_freeadultcomix() throws IOException {
+    @Tag("flaky") // https://github.com/RipMeApp/ripme/issues/269 - Disabled test - WordpressRipperTest: various domains flaky in CI
+    public void test_freeadultcomix() throws IOException, URISyntaxException {
         WordpressComicRipper ripper = new WordpressComicRipper(
-                new URL("http://freeadultcomix.com/finders-feepaid-in-full-sparrow/"));
+                new URI("http://freeadultcomix.com/finders-feepaid-in-full-sparrow/").toURL());
         testRipper(ripper);
     }
     @Test
-    public void test_delvecomic() throws IOException {
+    @Tag("flaky")
+    public void test_delvecomic() throws IOException, URISyntaxException {
         WordpressComicRipper ripper = new WordpressComicRipper(
-                new URL("http://thisis.delvecomic.com/NewWP/comic/in-too-deep/"));
+                new URI("http://thisis.delvecomic.com/NewWP/comic/in-too-deep/").toURL());
         testRipper(ripper);
     }
     @Test
-    public void test_Eightmuses_download() throws IOException {
+    public void test_Eightmuses_download() throws IOException, URISyntaxException {
         WordpressComicRipper ripper = new WordpressComicRipper(
-                new URL("https://8muses.download/lustomic-playkittens-josh-samuel-porn-comics-8-muses/"));
+                new URI("https://8muses.download/lustomic-playkittens-josh-samuel-porn-comics-8-muses/").toURL());
         testRipper(ripper);
     }
     @Test
-    public void test_Eightmuses_getAlbumTitle() throws IOException {
-        URL url = new URL("https://8muses.download/lustomic-playkittens-josh-samuel-porn-comics-8-muses/");
+    public void test_Eightmuses_getAlbumTitle() throws IOException, URISyntaxException {
+        URL url = new URI("https://8muses.download/lustomic-playkittens-josh-samuel-porn-comics-8-muses/").toURL();
         WordpressComicRipper ripper = new WordpressComicRipper(url);
-        assertEquals("8muses.download_lustomic-playkittens-josh-samuel-porn-comics-8-muses", ripper.getAlbumTitle(url));
+        Assertions.assertEquals("8muses.download_lustomic-playkittens-josh-samuel-porn-comics-8-muses", ripper.getAlbumTitle(url));
     }
     @Test
-    public void test_spyingwithlana_download() throws IOException {
+    @Tag("flaky")
+    public void test_spyingwithlana_download() throws IOException, URISyntaxException {
         WordpressComicRipper ripper = new WordpressComicRipper(
-                new URL("http://spyingwithlana.com/comic/the-big-hookup/"));
+                new URI("http://spyingwithlana.com/comic/the-big-hookup/").toURL());
         testRipper(ripper);
     }
     @Test
-    public void test_spyingwithlana_getAlbumTitle() throws IOException {
-        URL url = new URL("http://spyingwithlana.com/comic/the-big-hookup/");
+    public void test_spyingwithlana_getAlbumTitle() throws IOException, URISyntaxException {
+        URL url = new URI("http://spyingwithlana.com/comic/the-big-hookup/").toURL();
         WordpressComicRipper ripper = new WordpressComicRipper(url);
-        assertEquals("spyingwithlana_the-big-hookup", ripper.getAlbumTitle(url));
+        Assertions.assertEquals("spyingwithlana_the-big-hookup", ripper.getAlbumTitle(url));
     }
 
     @Test
-    @Disabled("https://github.com/RipMeApp/ripme/issues/269 - Disabled test - WordpressRipperTest: various domains flaky in CI")
-    public void test_pepsaga() throws IOException {
-        WordpressComicRipper ripper = new WordpressComicRipper(new URL("http://shipinbottle.pepsaga.com/?p=281"));
+    @Tag("flaky") // https://github.com/RipMeApp/ripme/issues/269 - Disabled test - WordpressRipperTest: various domains flaky in CI
+    public void test_pepsaga() throws IOException, URISyntaxException {
+        WordpressComicRipper ripper = new WordpressComicRipper(new URI("http://shipinbottle.pepsaga.com/?p=281").toURL());
         testRipper(ripper);
     }
 }
